# AMR-SS18

./: README.md
amr_binaries/: CMakeLists.txt  package.xml
amr_braitenberg/: README.md
amr_bugs/: CMakeLists.txt  README.md  package.xml
amr_bugs/nodes/: wallfollower.py
amr_bugs/src/amr_bugs/: bug_brain_visualizer.py
amr_navigation/: README.md
amr_perception/cfg/cpp/amr_perception/: LaserRepublisherConfig.h  ObstacleDetectorConfig.h
amr_perception/src/amr_perception/cfg/: LaserRepublisherConfig.py  ObstacleDetectorConfig.py
amr_ui/nodes/: occupancy_grid_display.py
assignments/03 Wallfollower/: README.md
assignments/03 Wallfollower/img/: README.md
assignments/04 Bug2/: README.md
assignments/04 Bug2/img/: README.md
